force-app/main/default/objects/Loan_Income__c/Loan_Income__c.object-meta.xml
<CustomObject>
    <label>Loan Income</label>
    <nameField>
        <displayFormat>INC-{000000}</displayFormat>
        <label>Loan Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>