force-app/main/default/objects/Loan_Income__c/fields/BorrowerBaseIndicator__c.field-meta.xml
<CustomField>
    <fullName>BorrowerBaseIndicator__c</fullName>
    <label>BorrowerBaseIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>