force-app/main/default/objects/Loan_Income__c/fields/Income_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Income_External_ID__c</fullName>
    <label>Income External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>