force-app/main/default/objects/Loan_Income__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <referenceTo>encompass_By_EM__Loan_Application__c</referenceTo>
    <relationshipLabel>Loan Incomes</relationshipLabel>
    <relationshipName>Loan_Incomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>